# SWE

./: .clinerules  .dockerignore  .env.example  .gitignore  .skills-complete  ACTION_PLAN_NOV_9.md  AGENT_EXECUTION_PLAN.md  AGENT_EXECUTION_READY.md  AGENT_SKILLS_INTEGRATION_COMPLETE.md  AGENT_SPAWN_COMPLETE.md  AGENT_SYSTEM_READY.md  AGENT_WORK_ASSIGNMENTS.md  ALERTING_SYSTEM_COMPLETE.md  ALL_COMPLETE.md  ALL_COMPLETE_SYNCED_CLOSED.md  ALL_EPICS_COMPLETE_REPORT.md  ALL_ISSUES_COMPLETE.md  ALL_WORK_COMPLETE.md  AUDIT_LOGGING_COMPLETE.md  BUILT_IN_SKILLS_IMPLEMENTATION.md  CASES_CLOSED.md  CASE_CLOSED_ALL_SYNCED.md  CASE_CLOSED_ALL_SYNCED_FINAL.md  CASE_CLOSED_COMPLETE.md  CASE_CLOSED_COMPLETE_FINAL.md  CASE_CLOSED_FINAL.md  CASE_CLOSED_FINAL_SYNCED.md  CASE_CLOSED_ISSUES_CREATED.md  CASE_CLOSED_SYNCED_COMPLETE.md  CASE_CLOSURE_FINAL.md  CASE_CLOSURE_FINAL_CONFIRMATION.md  CASE_CLOSURE_FINAL_REPORT.md  CASE_CLOSURE_SUMMARY.md  CDN_SETUP_COMPLETE.md  CHANGELOG_SKILLS.md  CI_FAILURE_ANALYSIS_AND_FIXES.md  CI_FIXES_AND_STATUS.md  CI_FIXES_APPLIED.md  CI_FIXES_COMPLETE.md  CI_FIXES_PROGRESS.md  (+236 more)
apps/api/: .coveragerc  .env.example  .gitignore  .mutmut.ini  API_SUMMARY.md  ARCHITECTURE.md  AUTH_FLOW.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  config.py  conftest.py  database.py  db.py  main.py  pyproject.toml  pytest.ini  redis_client.py  requirements-test.txt  requirements.txt  run.sh
apps/api/auth/: __init__.py  dependencies.py  jwt.py  models.py
apps/api/db/: __init__.py  agents.py  analytics.py  connection.py  issues.py  (+5 more)
(+511 files in other folders)
